--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 html, body{
     width: 100%;
     height: 100%;
-    background-color: var(--cor2);
+    background-color: #ffffff;
 }
 :root{
     --cor1: #7FAD6A;
@@ -47,7 +47,6 @@ header{
     align-items: center;
 }
 .logo-nome img{
-
    height: 9vh;  
 }
 
@@ -122,6 +121,7 @@ header{
     background-color: var(--cor1);
    transform: translateX(25px);
 }
+/*Editando sessão sobre a seguradora*/
 #sobre{
     color: var(--cor7);
     display: block;
@@ -130,9 +130,42 @@ header{
     padding-top: 150px;
     height: 700px;
 }
+/*Editando sessão dos produtos*/
 #produtos{
     color: var(--cor7);
     margin: 0px 100px;
     padding-top: 150px;
     height: 700px;
+}
+/*Edição das fotos*/
+.seguros{
+    display: flex;
+    justify-content: space-between;
+    height: 80%;
+    margin: 4rem 10rem;
+}
+.seguros>img{
+    display: flex;
+    width: 45%;
+    height: 55%;
+    border: 1px solid rgb(47, 47, 47);
+    border-radius: 5px 5px;
+    box-shadow: 5px 5px 1em ;
+}
+.seguros>p{
+    position: absolute;
+    visibility: collapse;
+}
+/*Hover das imagens do produtos*/
+.seguro-vida:hover{
+    width: 50%;
+    height: 60%;
+}
+.seguros>p:hover{
+    background-color: black;
+    visibility: visible;
+}
+.seguro-carro:hover{
+    width: 50%;
+    height: 60%;
 }
