--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0%;
-    scroll-behavior: smooth;
+    scroll-behavior:smooth;
+   
 }
 html, body{
     width: 100%;
@@ -18,21 +19,37 @@ html, body{
     --cor4-transparencia: rgb(132,188,108,0.3);
     --cor5: #b2d5a3;
     --cor6:#385b29; 
-    --cor6-transparencia: rgb(56,91,41,.3)
+    --cor6-transparencia: rgb(56,91,41,.8);
     --cor7:black;
     --cor8:rgb(88, 88, 88);  
     --cor9:rgb(0,0,0,.2);
+    --cor10:rgb(182, 182, 182);
     font-family:  'Quicksand', sans-serif;   
 }
 :root.dark-mode{
-   --cor3: #3b4f66;
-   --cor2: black;
-   --cor7: #ffffff;
+   
+   --cor1: #f7f7f7;
+   --cor2:#383737;
+   --cor2-header:#ffffff;
+   --cor3-header: #3b4f66;
+   --cor3: #5f88b6;
+   --cor4: #385b29;
+   --cor4-transparencia: rgb(56,91,41,.8);
+   --cor5: #426b30;
+   --cor6:rgb(132, 188, 108); 
+   --cor6-transparencia: rgb(132, 188, 108,.8);
+   --cor7:rgb(223, 219, 219);
+   --cor8:rgb(189, 188, 188);  
+ 
+   --cor10:rgb(41, 41, 41);
+
+
 }
 
 header{
     font-size: 1.2rem;
     position: fixed;
+    z-index: 9999;
 }
 #header-principal{
     display:flex;
@@ -99,120 +116,125 @@ main{
     display: flex;
     flex-direction: column;
     margin-top: 10vh;
-    width: 100%;
+    width: 100vw;
+    max-width: 100vw;
+    
 }
-
 #publicidade{
+    width: 100vw;
     display: flex;
-    width:100%; 
-    justify-content: center;  
-}
-#publicidade div{
-    display: flex;
-    width: 33.33%;
-    max-width: 33.33%;
-    height: 90vh; 
-    cursor: pointer;
-}
-
-.foto1{
-    background-image: url(img/banner2.jpg);
-    background-size: cover;
-    background-position-x: center;
+    flex-direction: column;
+    height: 80vh;
     justify-content: center;
+    align-items: top;
+    min-height: 70vh;
     
 }
-.foto2{
-    background-image: url(img/banner3.jpg);
-    background-size: cover;
-    background-position-x: center;
-    justify-content: center;
-}
-.foto3{
-    background-image: url(img/banner4.jpg);
-    background-size: cover;
-    background-position-x: center;
-    justify-content: center;
-}
-
-.foto1 h1, .foto2 h1, .foto3 h1{
-    display: flex;
-    width: 100%;
-    background-color: var(--cor4-transparencia);
-    display: none;
-    
-   
-}
-.foto1 p,.foto2 p,.foto3 p{
-    height: 20vh;
-    width: 30%;
-    position: absolute;
-    color: var(--cor6);
-    font-size: 2.5rem;
-    align-self: end;
-    text-align: center;
-    text-justify: center;
-    max-width: 33.33%;
-    background-color: var(--cor5);
-    border-radius: 15px;
-    border: 2px solid var(--cor6);
-    display: none;
-    margin-bottom: 20px;
-   
-}
-.foto1:hover h1 {
-    display: block;
-}
-.foto1:hover p{
-    display: block;
-}
-.foto2:hover h1 {
-    display: block;
-}
-.foto2:hover p{
-    display: block;
-}.foto3:hover h1 {
-    display: block;
-}
-.foto3:hover p{
-    display: block;
-}
-
-
-/* .dark{
+.publi-main{
+    color: var(--cor1);
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 2rem; 
-    color: var(--cor1);
-
-}
-
-.btn-dark{
-    width: 50px;
-    height: 25px;
-    border: 2px var(--cor1);
-    border-style: solid;
-    margin-right: .5rem;
-    border-radius: 25px;
-    position: relative;
-    cursor: pointer;
+    gap: 5vw;
+    padding: 20px 20px;
+    height: 100%;
     
+
+
 }
-.btn-dark::before{
+
+.publi-main:before{
     content: '';
     position: absolute;
-    height:18px ;
-    width: 18px;
-    background-color:var(--cor2);
-    border-radius: 50%;
-    top:3.5px;
-    left: 3.5px; 
+    width: 15px;
+    height: 15px;
+    transform: rotate(45deg);
+    border: solid var(--cor6) 3px;
+    bottom: 7vh;
+    transition: 1s;
+    background-color: var(--cor6-transparencia);
+    z-index: 10;
+
+   
 }
-.btn-dark.ativo::before{
+
+.publi-main:after{
+    content: '';
+    position: absolute;
+    background-color: var(--cor6);
+    height: 3px;
+    width: 0;
+    bottom: 8vh;
+    transition: .6s;
+   
+
+}
+.publi-main:hover:after{
+    width: 90%;  
+}
+.publi-main:hover:before{
+    transform: rotate(765deg);
+    background-color: var(--cor2);
+    
+    
+    
+}
+.slogan{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-sizing: border-box;
+    gap: 30px;
+    width: 30vw;
+    min-width: 400px;
+    height: 30vw;
+    text-align: center;
+    align-items: center;
+
+}
+.slogan h1{
+    font-size: 2.5rem;
+    max-width: 100%;
+    font-weight: bold;
+}
+.slogan p{
+    font-size: 1.5rem;
+}
+.botao{
+    text-decoration: none;
+    box-sizing: border-box; 
+    padding: 1vh 0;
+    font-size: 1.5rem;
+    font-weight: bold;
+    width: 10vw;
+    min-width: 150px;
+    height: auto;
+    margin-top: 20px;
     background-color: var(--cor1);
-   transform: translateX(25px);
-} */
+    color:black;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.botao:hover{
+    color: black;
+    background-color: rgb(49, 150, 49);
+    transform: scale(1.1);
+    transition: .3s;
+}
+
+.foto-principal img{
+    width: 40vw;
+    max-width: 50vw;
+    flex: none;
+    box-shadow: 5px 5px 1em rgb(0,0,0,.5);
+    border: solid rgb(0,0,0,.8) 1px;
+    max-height: 100%;
+}
+/* Esta classe é adicionado a imagens no darkmode para diminuir o brilho e ficar mais agradável ao olhar. */
+.imgDarkMode{
+    filter: brightness(.7); 
+}
+
 /*Editando sessão sobre a seguradora*/
 
 
@@ -246,6 +268,7 @@ main{
     border: 1px solid rgb(47, 47, 47);
     border-radius: 5px 5px;
     box-shadow: none;
+    transition: .5s;
 }
 .img-seguro{
     width: 100%;
@@ -253,6 +276,7 @@ main{
     border: 1px solid rgb(47, 47, 47);
     border-radius: 5px 5px;
     box-shadow: 5px 5px 1em black;
+   
 }
 /*CADASTRO DO CLIENTE NO SEGURO DE VIDA*/
 #seguro-de-vida{
@@ -261,6 +285,7 @@ main{
     height: 700px;
     margin: 0px 100px;
     padding-top:150px ;
+    
     
 }
 .detalhes{
@@ -297,7 +322,8 @@ main{
 }
 .dados>input{
     border-radius: 5px;
-    padding: 2% 10%;
+    width: 100%;
+    padding: 2% 0;
 }
 .botao-contato{
     display: flex;
@@ -310,12 +336,151 @@ main{
 }
 /*Hovers*/
 .seguros>a:hover{
-    width: 45%;
-    height: 100%;
+    /* width: 45%;
+    height: 100%; */
+    transform: scale(1.1);
     cursor: pointer;
 }
 .botao-contato:active{
     padding: 2% 9%;
     background-color: gray;
     color: white;
+}
+footer{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    padding: 50px 0;
+    background-color: var(--cor3-header);
+}
+.footer-principal{
+    display: flex;
+    justify-content: space-between;
+}
+#social{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    padding: 20px;
+    background-color: rgb(0,0,0,.2);
+    max-width: 25vw;
+    min-width:300px;
+    margin-right: 50px;
+    min-height: 20vh;
+
+    
+}
+#social h2{
+    box-sizing: border-box;
+    padding: 15px;
+    color:var(--cor1);
+
+    font-weight: bold;
+    max-width: 100%;
+    text-align: center;
+}
+.social-icones{
+    display: flex;
+}
+.icon{
+    width: 30px;
+    margin: 0 10px;
+    border-radius: 50%;
+    box-shadow: 3px 2px 5px rgb(0, 0, 0);
+    transition: .3s;
+}
+.icon:hover{
+    transform: scale(1.2);
+}
+.apps a{
+    display: flex;
+    border: solid rgb(0, 0, 0) 1px;
+    border-radius: 5px; 
+    gap: 10px;
+    padding: 5px;
+    box-shadow: 3px 2px 5px rgb(0, 0, 0);
+    transition: .3s;
+    text-decoration: none;
+}
+.apps a:hover{
+    transform: scale(1.05);
+}
+.apps img{
+   height: 50px;
+}
+.apps p{
+    font-size: 1rem;
+    color: white;
+}
+.colaboradores{
+    color: var(--cor1);
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    min-width: 300px;
+    width: 20vw;
+    padding: 20px;
+    margin-left: 50px;
+    min-height: 20vh;
+    background-color: rgb(0,0,0,.2);
+    
+}
+.colaboradores h2{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.colaborador a{
+    align-items: center;
+    display: flex;
+    flex-direction: row-reverse ;
+    justify-content: start;
+    text-decoration: none;
+    color: var(--cor1);
+    margin-bottom: 20px;
+    gap: 10px;
+    box-sizing: border-box;
+    padding: .5rem;
+}
+.colaborador a:hover{
+    background-color: var(--cor9);
+    border-radius: .3rem;
+}
+.colaborador a:hover h3{
+    transform: scale(1.1);
+   
+} 
+.site{
+    color: var(--cor1);
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    min-width: 300px;
+    width: 20vw;
+    padding: 20px;
+    min-height: 20vh;
+    background-color: rgb(0,0,0,.2);
+    align-items: center;
+}
+.site h2{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.site a{
+    align-items: center;
+    display: flex;
+    flex-direction: row-reverse ;
+    justify-content: start;
+    text-decoration: none;
+    color: var(--cor1);
+    margin-bottom: 20px;
+    gap: 10px;
+    box-sizing: border-box;
+    padding: .5rem;
+    width: 100%;
+}
+.site a:hover{
+    background-color: var(--cor9);
+    border-radius: .3rem;
 }
