--- a/btn.css
+++ b/btn.css
@@ -83,8 +83,17 @@
     .publi-main{
         flex-direction: column-reverse;
         justify-content: start;
-        margin-top: 10vh;
+        /* margin-top: 10vh; */
         min-height: 50vh;
+        background-image: url(img/4safe-banner.jpg);
+        background-size: cover;
+        background-position: center;  
+             
+    }
+    .slogan{
+        margin-top: 0;
+        height: 100%;
+        background-color: rgb(0,0,0,.6);
         
     }
     .slogan h2{
