--- a/style.css
+++ b/style.css
@@ -116,12 +116,13 @@ main{
     display: flex;
     flex-direction: column;
     margin-top: 10vh;
-    width: 100vw;
+    width: 87vw;
     max-width: 100vw;
     
 }
 #publicidade{
-    width: 100vw;
+    margin: 0px 100px;
+    width: 87vw;
     display: flex;
     flex-direction: column;
     height: 80vh;
@@ -243,28 +244,55 @@ main{
     display: block;
     position: static;
     margin: 0px 100px;
-    padding-top: 150px;
+    padding-top: 120px;
     height: 700px;
 }
 /*Editando sessão dos produtos*/
 #produtos{
     color: var(--cor7);
     margin: 0px 100px;
-    padding-top: 150px;
+    padding-top: 120px;
     height: 700px;
+}
+#produtos>h1{
+    color: var(--cor6);
+    font-size: 25px;
 }
 /*Edição das fotos*/
 .seguros{
     display: flex;
     justify-content: space-between;
-    height: 50%;
-    padding: 50px;
-    margin: 4rem 5rem;
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+    margin: 2rem 0;
 }
-.seguros>a{
+.tipo-seguro{
+    text-align: left;
+    width: 60%;
+    height: 60%;
+    margin: 0 5%;
+    padding: 0;
+    align-items: center;
+    /* border: 1px solid black; */
+}
+.tipo-seguro>p{
+    margin-left:8%;
+}
+.tipo-seguro ul{
+    margin: 5% 0;
+}
+.tipo-seguro ul li{
+    margin-left: 15%;
+    list-style: none;
+    padding: 1%;
+}
+
+.tipo-seguro>a{
     display: flex;
-    width: 40%;
-    height: 95%;
+    margin: 0 auto;
+    width: 60%;
+    height: 60%;
     border: 1px solid rgb(47, 47, 47);
     border-radius: 5px 5px;
     box-shadow: none;
@@ -279,14 +307,32 @@ main{
    
 }
 /*CADASTRO DO CLIENTE NO SEGURO DE VIDA*/
+#seguro-de-carro{
+    justify-content: space-between;
+    width: 80%;
+    height: 700px;
+    margin: 0px 100px;
+    padding-top:150px ;
+}
 #seguro-de-vida{
     justify-content: space-between;
     width: 80%;
     height: 700px;
     margin: 0px 100px;
     padding-top:150px ;
-    
-    
+}
+
+.texto-carro{
+    margin-right: 5% ;
+}
+.texto-carro>h1{
+    margin-bottom: 2%;
+}
+.texto-carro>p{
+    text-align: justify;
+}
+.texto-carro>h2{
+    margin-top: 5%;
 }
 .detalhes{
     display: flex;
@@ -335,7 +381,7 @@ main{
     cursor: pointer;
 }
 /*Hovers*/
-.seguros>a:hover{
+.tipo-seguro>a:hover{
     /* width: 45%;
     height: 100%; */
     transform: scale(1.1);
@@ -349,7 +395,7 @@ main{
 footer{
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     padding: 50px 0;
     background-color: var(--cor3-header);
 }
