--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 *{
-    margin: 0;
+    margin: 0%;
     padding: 0%;
-    scroll-behavior:smooth;
-   
+    scroll-behavior:smooth;  
 }
 html, body{
     width: 100%;
@@ -27,7 +26,6 @@ html, body{
     font-family:  'Quicksand', sans-serif;   
 }
 :root.dark-mode{
-   
    --cor1: #f7f7f7;
    --cor2:#383737;
    --cor2-header:#ffffff;
@@ -40,14 +38,10 @@ html, body{
    --cor6-transparencia: rgb(132, 188, 108,.8);
    --cor7:rgb(223, 219, 219);
    --cor8:rgb(189, 188, 188);  
- 
    --cor10:rgb(41, 41, 41);
-
-
 }
-
 header{
-    font-size: 1.2rem;
+    font-size: 1.0rem;
     position: fixed;
     z-index: 9999;
 }
@@ -61,8 +55,7 @@ header{
     color:var(--cor2-header);
     top:0;
     position: fixed;
-    justify-content: space-between;
-    
+    justify-content: space-between;   
 }
 .logo-nome{
     display: flex;
@@ -70,11 +63,9 @@ header{
 }
 .logo-nome img{
    height: 9vh;  
-
 }
 
 #logo-mobile{
-    
     display: none;
 }
 .logo-nome h2{
@@ -100,7 +91,6 @@ header{
     list-style: none;
     box-sizing: border-box;
     padding: .5rem;
-    
 }
 .nav a{
     text-decoration: none;
@@ -110,26 +100,23 @@ header{
     background-color: var(--cor9);
     border-radius: .3rem;
 }
-
 main{
     position:static;
     display: flex;
     flex-direction: column;
     margin-top: 10vh;
-    width: 87vw;
+    width: 90vw;
     max-width: 100vw;
-    
 }
 #publicidade{
     margin: 0px 100px;
     width: 87vw;
     display: flex;
     flex-direction: column;
-    height: 80vh;
+    height: 90vh;
     justify-content: center;
     align-items: top;
     min-height: 70vh;
-    
 }
 .publi-main{
     color: var(--cor1);
@@ -138,12 +125,9 @@ main{
     align-items: center;
     gap: 5vw;
     padding: 20px 20px;
+    margin-bottom: 50px;
     height: 100%;
-    
-
-
 }
-
 .publi-main:before{
     content: '';
     position: absolute;
@@ -154,11 +138,8 @@ main{
     bottom: 7vh;
     transition: 1s;
     background-color: var(--cor6-transparencia);
-    z-index: 10;
-
-   
+    z-index: 10; 
 }
-
 .publi-main:after{
     content: '';
     position: absolute;
@@ -167,18 +148,13 @@ main{
     width: 0;
     bottom: 8vh;
     transition: .6s;
-   
-
 }
 .publi-main:hover:after{
     width: 90%;  
 }
 .publi-main:hover:before{
     transform: rotate(765deg);
-    background-color: var(--cor2);
-    
-    
-    
+    background-color: var(--cor2);   
 }
 .slogan{
     display: flex;
@@ -191,7 +167,6 @@ main{
     height: 30vw;
     text-align: center;
     align-items: center;
-
 }
 .slogan h1{
     font-size: 2.5rem;
@@ -222,7 +197,6 @@ main{
     transform: scale(1.1);
     transition: .3s;
 }
-
 .foto-principal img{
     width: 40vw;
     max-width: 50vw;
@@ -235,16 +209,13 @@ main{
 .imgDarkMode{
     filter: brightness(.7); 
 }
-
 /*Editando sessão sobre a seguradora*/
-
-
 #sobre{
     color: var(--cor7);
     display: block;
     position: static;
     margin: 0px 100px;
-    padding-top: 120px;
+    padding-top: 150px;
     height: 700px;
 }
 /*Editando sessão dos produtos*/
@@ -287,7 +258,6 @@ main{
     list-style: none;
     padding: 1%;
 }
-
 .tipo-seguro>a{
     display: flex;
     margin: 0 auto;
@@ -306,7 +276,7 @@ main{
     box-shadow: 5px 5px 1em black;
    
 }
-/*CADASTRO DO CLIENTE NO SEGURO DE VIDA*/
+/*CADASTRO DO CLIENTE NO SEGURO*/
 #seguro-de-carro{
     justify-content: space-between;
     width: 100%;
@@ -323,14 +293,13 @@ main{
 }
 .detalhes{
     display: flex;
-    width: 80%;
+    width: 75%;
     height: 50%;
-    margin: 0 auto;
+    margin: 0 75px;
     border-radius: 5px;
     padding: 5% 5%;
     background-color: #e5e4e2;
 }
-
 .texto-carro{
     margin-right: 5% ;
     text-align: left;
@@ -426,14 +395,11 @@ footer{
     min-width:300px;
     margin-right: 50px;
     min-height: 20vh;
-
-    
 }
 #social h2{
     box-sizing: border-box;
     padding: 15px;
     color:var(--cor1);
-
     font-weight: bold;
     max-width: 100%;
     text-align: center;
@@ -482,7 +448,6 @@ footer{
     margin-left: 50px;
     min-height: 20vh;
     background-color: rgb(0,0,0,.2);
-    
 }
 .colaboradores h2{
     text-align: center;
@@ -506,7 +471,6 @@ footer{
 }
 .colaborador a:hover h3{
     transform: scale(1.1);
-   
 } 
 .site{
     color: var(--cor1);
