--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
     margin: 0%;
     padding: 0%;
     scroll-behavior:smooth;  
+
 }
-html, body{
-    width: 100%;
-    height: 100%;
+body{
+    width: 100vw;
     background-color: var(--cor2);
+   
 }
 :root{
     --cor1: #7FAD6A;
@@ -23,6 +24,8 @@ html, body{
     --cor8:rgb(88, 88, 88);  
     --cor9:rgb(0,0,0,.2);
     --cor10:rgb(182, 182, 182);
+    --cor11: #e5e4e2;
+    --cor12:#cac9c7;
     font-family:  'Quicksand', sans-serif;   
 }
 :root.dark-mode{
@@ -30,15 +33,17 @@ html, body{
    --cor2:#383737;
    --cor2-header:#ffffff;
    --cor3-header: #3b4f66;
-   --cor3: #5f88b6;
+   --cor3: rgb(14, 14, 14,0.7);
    --cor4: #385b29;
    --cor4-transparencia: rgb(56,91,41,.8);
    --cor5: #426b30;
    --cor6:rgb(132, 188, 108); 
    --cor6-transparencia: rgb(132, 188, 108,.8);
    --cor7:rgb(223, 219, 219);
-   --cor8:rgb(189, 188, 188);  
+   --cor8:rgb(189, 188, 188); 
    --cor10:rgb(41, 41, 41);
+   --cor11: rgb(189,188,188,0.3) ;
+   --cor12:rgb(14, 14, 14,0.7);
 }
 header{
     font-size: 1.0rem;
@@ -48,7 +53,7 @@ header{
 #header-principal{
     display:flex;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     height: 7vh;
     padding: 1.5vh;
     background-color: var(--cor3-header);
@@ -101,22 +106,26 @@ header{
     border-radius: .3rem;
 }
 main{
-    position:static;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-top: 10vh;
-    width: 90vw;
+    width: 100vw;
     max-width: 100vw;
+    padding: 0 5vw;
+}
+section{
+    display: block;
 }
 #publicidade{
-    margin: 0px 100px;
     width: 87vw;
     display: flex;
     flex-direction: column;
-    height: 90vh;
+    height: 100vh;
     justify-content: center;
-    align-items: top;
-    min-height: 70vh;
+    align-items: center;
+    min-height: 100vh;
 }
 .publi-main{
     color: var(--cor1);
@@ -127,57 +136,8 @@ main{
     padding: 20px 20px;
     margin-bottom: 50px;
     height: 100%;
+    min-height: 100vh;  
 }
-/* <<<<<<< beatriz/atualizacao-pagina-produto
-.publi-main:before{
-    content: '';
-    position: absolute;
-=======
-.efeito{
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-}
-.quadrado{
-    display: flex;
-    justify-content: center;
-
-    width: 15px;
-    height: 15px;
-    transform: rotate(45deg);
-    transform: rotate(45deg);
-    border: solid var(--cor6) 3px;
-    bottom: 7vh;
-    background-color: var(--cor6-transparencia);
-
-    z-index: 10; 
-}
-.publi-main:after{
-    z-index: 20;
-    transition: .6s;
-}
-.efeito::after{
-
-    content: '';
-    position: absolute;
-    margin-top: 7px;
-    background-color: var(--cor6);
-    height: 3px;
-    width:0;
-    transition: .6s;
-}
-#publicidade:hover .efeito:after{
-    width: 90vw;
-}
-#publicidade:hover .quadrado{
-    transform: rotate(765deg);
-
-    background-color: var(--cor2);   
-
-/*     background-color: var(--cor2); */
-
-}
-
 .slogan{
     display: flex;
     flex-direction: column;
@@ -233,137 +193,169 @@ main{
 }
 /*Editando sessão sobre a seguradora*/
 #sobre{
+    box-sizing: border-box;
     color: var(--cor7);
-    display: block;
-    position: static;
-    margin: 0px 100px;
-    padding-top: 150px;
-    height: 700px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100vh;
+    width: 90vw;
+    padding: 0 5vw;
+}
+.txt-sobre{
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    max-width: 20vw; 
+    gap: 1vh; 
+    text-align: justify;
+    min-width: 300px;
+}
+.txt-sobre h2{
+    font-size: 2.5rem;
+    color: var(--cor1);
+}
+.txt-sobre p{
+    font-size: 1.1rem;
+}
+.img-sobre img{
+
+    width:30vw;
+    max-width: 80vw;
+    max-height: auto;
+    box-shadow: 5px 5px 1em rgb(0,0,0,.5);
+    border: solid rgb(0,0,0,.8) 1px;
 }
 /*Editando sessão dos produtos*/
 #produtos{
-    color: var(--cor7);
-    margin: 0px 100px;
-    padding-top: 120px;
-    height: 700px;
+    box-sizing: border-box;
+    margin-top: 10vh;
+    width: 90vw;
+    min-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
-#produtos>h1{
-    color: var(--cor6);
-    font-size: 25px;
+#produtos>h2{
+    color: var(--cor1);
+    font-size: 2.5rem;
+    text-align: center;
 }
 /*Edição das fotos*/
+.beneficios{
+    width: 90vw;
+    min-height: 100vh;
+}
 .seguros{
+    color: var(--cor7);
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
-    height: 100%;
+    min-height: 100%;
     width: 100%;
-    padding: 10px;
-    margin: 2rem 0;
+    padding: 0 20px;  
 }
 .tipo-seguro{
-    text-align: left;
-    width: 60%;
-    height: 60%;
-    margin: 0 5%;
-    padding: 0;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    /* border: 1px solid black; */
+    gap: 3vw;
+    min-width: 300px;
+    width: 100%;
 }
-.tipo-seguro>p{
-    margin-left:8%;
+.tipo-seguro h3{
+    box-sizing: border-box;
+    width: 100%;
+    text-align: center;
 }
+
 .tipo-seguro ul{
-    margin: 5% 0;
+    box-sizing: border-box;
+    min-height: 35vh;
+    list-style: none;
+
 }
 .tipo-seguro ul li{
-    margin-left: 15%;
-    list-style: none;
-    padding: 1%;
+    margin: 5px 0   ;
 }
-.tipo-seguro>a{
+.tipo-seguro{
     display: flex;
-    margin: 0 auto;
-    width: 60%;
-    height: 60%;
-    border: 1px solid rgb(47, 47, 47);
-    border-radius: 5px 5px;
-    box-shadow: none;
-    transition: .5s;
+    flex-direction: column;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    height: 100%; 
+    margin: 50px;
 }
 .img-seguro{
-    width: 100%;
-    height: 100%;
-    border: 1px solid rgb(47, 47, 47);
+    height: 30vh;
+    border: 1px solid  rgb(0,0,0,.8);
     border-radius: 5px 5px;
-    box-shadow: 5px 5px 1em black;
-   
+    box-shadow: 5px 5px 1em rgb(0,0,0,.5);
+    background-color: var(--cor2-header);
+    transition: .5s;
 }
 /*CADASTRO DO CLIENTE NO SEGURO*/
-#seguro-de-carro{
-    justify-content: space-between;
-    width: 100%;
-    height: 700px;
-    margin: 0px 100px;
-    padding-top:150px ;
-}
+
 #seguro-de-vida{
-    justify-content: space-between;
-    width: 100%;
-    height: 700px;
-    margin: 0px 100px;
-    padding-top:150px ;
-}
-.detalhes{
+    box-sizing: border-box;
     display: flex;
-    width: 75%;
-    height: 50%;
-    margin: 0 75px;
-    border-radius: 5px;
-    padding: 5% 5%;
-    background-color: #e5e4e2;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    width: 100%;
+    min-height: 100vh;
+    padding: 20px;
+    color: var(--cor7);
+  
 }
-.texto-carro{
-    margin-right: 5% ;
-    text-align: left;
-    margin-left: 5%;
+.formulario{
+    box-sizing: border-box;
+    background-color:var(--cor12);
+    width: 40vw;
+    min-height: 100%;
+    padding: 20px;
+    min-width: 250px;
 }
-.texto-carro>h1{
-    margin-bottom: 2%;
-    margin-top: 3%;
-}
-.texto-carro>p{
-    text-align: justify;
-}
-.texto-carro>h2{
-    margin-top: 7%;
+
+.detalhes{
+    box-sizing: border-box;
+    display: flex;
+    width: 100%;
+    min-height: 80%;
+    background-color:var(--cor11);
 }
 .texto{
+    box-sizing: border-box;
     width: 100%;
-    margin-right: 10% ;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 300px;
 }
-.texto>h1{
-    margin-bottom: 7%;
+.resumo h2{
+    margin: 25px 0;
+}.resumo{
+    min-width: 100%
 }
-.texto>p{
-    text-align: justify;
-}
-.texto>h2{
-    margin-top: 15%;
-}
-.formulario-vida{
-    background-color: #cac9c7;
-    width: 40%;
-    height: 100%;
-    border-radius: 5px;
-    padding: 2% 5%;
-}
-.formulario-carro{
-    background-color: #cac9c7;
+
+#seguro-de-carro{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
     width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    padding: 2% 5%;
+    min-height: 100vh;
+    padding: 20px;
+    color: var(--cor7);
+    min-height: 100vh; 
 }
+
 .dados>label{
     display: block;
     margin-top: 8%;
@@ -393,6 +385,76 @@ main{
     padding: 2% 9%;
     background-color: gray;
     color: white;
+}
+.faqs{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    width: 100%;
+    align-items: center;
+    margin-top: 50px;
+    color: var(--cor7);
+}
+.faqs h2{
+    margin-bottom: 20px;
+    color: var(--cor7);
+}
+.faq{
+    width: 60vw;
+    display: flex;
+    flex-direction: column;
+    margin: 1vh 2vw;
+    border-bottom: solid black 1px;
+    padding: 1vw;
+    
+    
+}
+.titulo{
+    display: flex;
+    max-width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2vw;
+    margin-bottom: 1rem;
+
+}
+
+.btn-faq1, .btn-faq2, .btn-faq3, .btn-faq4, .btn-faq5{
+    width: 20px;
+    height: 3px;
+    background-color: var(--cor7);
+    transition: .6s;
+    cursor: pointer;
+}
+.btn-faq1::after , .btn-faq2::after, .btn-faq3::after, .btn-faq4::after, .btn-faq5::after{
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 3px;
+    background-color:var(--cor7);
+    transform: rotate(90deg);
+    transition: .6s;
+}
+.resp-faq1, .resp-faq2, .resp-faq3, .resp-faq4, .resp-faq5{
+    padding: 0 2vw;
+    max-width: 70%;
+    align-items: flex-start;
+    transition: .6s;
+    height: 0;
+    visibility: hidden;
+    overflow-y: hidden;
+    
+}
+.faq-on{
+    transform:rotate(-45deg);
+    display: block;
+}
+.open-resposta{
+    display: block;
+    height: 13vh;
+    overflow-y: hidden;
+    visibility: visible;
+    
 }
 footer{
     display: flex;
@@ -526,64 +588,4 @@ footer{
 .site a:hover{
     background-color: var(--cor9);
     border-radius: .3rem;
-}
-.faqs{
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    margin-top: 200px;
-}
-.faq{
-    width: 50vw;
-    display: flex;
-    flex-direction: column;
-    margin: 1vh 5vw;
-    border-bottom: solid black 1px;
-    padding: 1vw;
-    
-    
-}
-.titulo{
-display: flex;
-max-width: 100%;
-justify-content: space-between;
-align-items: center;
-padding: 0 2vw;
-
-}
-
-.btn-faq1, .btn-faq2{
-    width: 20px;
-    height: 3px;
-    background-color: #000000;
-    transition: .6s;
-    cursor: pointer;
-}
-.btn-faq1::after , .btn-faq2::after{
-    content: '';
-    position: absolute;
-    width: 20px;
-    height: 3px;
-    background-color: #000000;
-    transform: rotate(90deg);
-    transition: .6s;
-}
-.resp-faq1, .resp-faq2{
-    padding: 0 2vw;
-    max-width: 70%;
-    align-items: flex-start;
-    transition: .6s;
-    height: 0;
-    visibility: hidden;
-    overflow-y: hidden;
-    
-}
-.faq-on{
-    transform:rotate(-45deg);
-    display: block;
-}
-.open-resposta{
-    display: block;
-    height: 10vh;
-    visibility: visible;
 }
