--- a/styles-media.css
+++ b/styles-media.css
@@ -1,3 +1,125 @@
+@media screen and (max-width:1250px){
+    #logo-navegador{
+        display: none;
+    }
+    #logo-mobile{
+        display: block;
+    }
+}
+@media screen and (max-width:870px){
+    .menu-btn{
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 4rem;
+        height: 4rem;
+        cursor: pointer;
+        transition: all 0.5s ease-in-out;
+        margin-right: 1rem;
+        
+    }
+    .btn-burger{
+        width: 1.5rem;
+        height: .2rem;
+        background-color:  var(--cor1);
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgb(0,0,0,.2); 
+        transition: all 0.5s ease-in-out; 
+    }
+    .btn-burger:after, .btn-burger:before{
+        content: '';
+        position: absolute;
+        width: 1.5rem;
+        height: 0.2rem;
+        background-color: var(--cor1);
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgb(0,0,0,.2); 
+        transition: all 0.5s ease-in-out; 
+    }
+    .btn-burger::after{
+        transform: translateY(-.5rem);
+    }
+    .btn-burger::before{
+        transform: translateY(.5rem);
+    }
+    
+    .menu-btn.open .btn-burger{
+        transform: translateX(-50px);
+        background: transparent;
+        box-shadow: none;
+    }
+    .menu-btn.open .btn-burger::before{
+        transform: rotate(45deg) translate(35px,-35px);
+    }
+    .menu-btn.open .btn-burger::after{
+        transform: rotate(-45deg) translate(35px,35px);
+    }
+    .nav {
+        display: none;
+        position: absolute;
+        color: var(--cor1);
+        background-color:var(--cor3-header);
+        margin-right: 1rem;
+        top: 10vh;
+        right: 0;
+        width: 30vw;    
+        padding: 0; 
+        
+    }
+    .nav.nav-expandida{
+       display: block;  
+    }
+    .nav li{
+       box-sizing: border-box;
+       text-align: center;
+       padding: 1rem 0;
+       
+    }
+    .publi-main{
+        flex-direction: column;
+        min-height: 70vh;
+    }
+    .slogan{
+        margin-top: -100px;
+        margin-bottom: 100px;
+    }
+    #sobre{
+        flex-direction: column;
+        margin-top: -150px;
+    }
+   .seguros{
+        flex-direction: column;
+       align-items: center;
+    }
+    .tipo-seguro{
+        margin-bottom: 50px;
+    }
+    #seguro-de-carro, #seguro-de-vida{
+        margin-top: -100px;
+    }
+    .footer-principal{
+        margin: 0;
+        padding: 0;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+    
+    #social{
+        margin: 0;
+    
+    }
+    .colaboradores{
+        margin: 0;
+    }
+    .faq{
+        width: 100%;
+    }
+    .open-resposta{
+        height: 30vh;
+    }
+}
 @media screen and (max-width:580px){
     .dark{
      margin-right: -.5rem; 
